--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "dependencies": {
     "mmdb-lib": "2.0.2",
     "lru-cache": "7.10.1",
-    "uWebSockets.js": "github:e3dio/uWebSockets.js#binaries"
+    "uWebSockets.js": "uWebSockets.js@uNetworking/uWebSockets.js#v20.10.0"
   }
 }
